[gd_scene load_steps=2 format=3 uid="uid://r5s6t7u8v9w0x"]

[ext_resource type="Script" path="res://scripts/ui/pet/pet_journal_ui.gd" id="1"]

[node name="PetJournalUI" type="Control"]
visible = false
z_index = 200
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(900, 700)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "Pet's Journey Journal"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PagesContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="StatsPage" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="PageTitle" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "Adventure Stats"
horizontal_alignment = 1

[node name="VSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
layout_mode = 2

[node name="DaysTogetherLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Days Together: X"

[node name="AffectionLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Affection: ♥♥♥♥♡ (Companion)"

[node name="ExpeditionsLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Total Expeditions: X"

[node name="GoldEarnedLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Gold Earned: X"

[node name="PartsFoundLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Parts Found: X"

[node name="FavoriteDestLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Favorite Destination: X"

[node name="TimesFedLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Times Fed: X"

[node name="TimesPettedLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/StatsPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Times Petted: X"

[node name="MomentsPage" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="PageTitle" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/MomentsPage"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "Memorable Moments"
horizontal_alignment = 1

[node name="VSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/MomentsPage"]
layout_mode = 2

[node name="MomentsScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/MomentsPage"]
layout_mode = 2
size_flags_vertical = 3

[node name="MomentsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PagesContainer/MomentsPage/MomentsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Close"
